"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-06-16	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-36:
	  chpsim bug fix: false positive on checking for channel conflicts
		is fixed, by detecting rechecking (polling) on same channel.
		Source affected: EventExecutor.cc: EventRechecker (send/recv)
	  sim/chpsim/State.cc: more debug hooks
	  Ton of random-timing chpsim test cases added to test suite.


2007-06-15	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-35:
	  Only long long portability touch ups.  See util/ChangeLog.
	  lexer/purifly_flex.awk: attempted to work around brokenness of
	  	mawk implementation, but gave up.  
	  Makefile.am: SED_YACC_YYPARSE now matches (void) prototype to
	  	support an even older byacc skeleton.


2007-06-15	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-34-merged-LPxx-04:
	  Branch merge.
	  Summary: test suite is now blessed on LP64 platforms, now that 
		test suite has taken appropriate measures to filter out
		trivial binary-size differences.
	  Tested on amd64-freebsd6.2: distcheck is in good shape!


2007-06-14	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-32-LPxx-04:
	  No source revision.
	  util/test/Makefile.am: upgraded test scheme to use suffix rules
		for tests and removed the test-expect.sh[.in].
		Added support for non-LP32 binary differences in test suite:
		only affecting test static_count_ptr_test.
	  Branch end.


	* HACKT-00-01-04-main-00-81-32-LPxx-03:
	  No source revision, see test/ChangeLog.
	  No regressions (false-positives) occur in 64b build/tests now!
	  However one annoying util/test regression remains to be fixed, 
		in the sizeof(ptr) dump of static_count_ptr_test.


2007-06-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-32-LPxx-02: